[project]
name = "robocop-ng"
version = "1.1.0"
description = "Discord bot for handling ReSwitched moderation tasks and such, (n)ext-(g)en rewrite of Robocop"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "humanize>=4.12.1",
    "parsedatetime>=2.6",
    "aiohttp>=3.11.13",
    "gidgethub>=5.3.0",
    "Pillow>=11.1.0",
    "discord-py>=2.5.2",
]
